...
        }}
      />
      <Tabs.Screen
        name="holdings"
        options={{
          tabBarAccessibilityLabel: "Holdings",
          tabBarButtonTestID: "tab-holdings",
          title: "Holdings",
        }}
      />
      <Tabs.Screen
        name="progress"
        options={{
...
        }}
      />
      <Tabs.Screen
        name="cash"
        options={{
          tabBarAccessibilityLabel: "Cash",
          tabBarButtonTestID: "tab-cash",
          title: "Cash",
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
...
